Fixed attachment of threadwatcher to topbar and move threadwatcher dialog from bottom of page where it was overlapped by bottom bar, to top of the page.

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1358,7 +1358,7 @@ div.boardlist {
     width: 15%;
     position: fixed;
     right: 0pt;
-    bottom: 0pt;
+    top: 20pt;
     margin: 0pt;
     padding: 0pt;
 }
